Wed, Jan 10, 2024, 8:38 PM -05:00

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Pygame CodeSpace Graphics</title>
   </head>
   <body>
-    <img src="{{ url_for('video_feed') }}" width="640" height="480">
+    <img src="{{ url_for('https://www.youtube.com/watch?v=gQA2zUDLbyU') }}" width="640" height="480">
   </body>
 </html>
